Tue Dec  6 15:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2285_Regression/Bug_2285_Regression.mpc:
          Added 'after += ...' lines to files where projects share one or
          more IDL files.

Tue Dec  6 15:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Security/BiDirectional/client.cpp:
        * orbsvcs/tests/Security/BiDirectional/test_i.cpp:
          Fixed 64bit conversion warnings

Tue Dec  6 08:34:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2287_Regression/Bug_2287_Regression.mpc:
        * examples/OBV/Typed_Events/Typed_Events.mpc:
        * examples/Load_Balancing/Load_Balancing.mpc:
          Added 'after += ...' lines to files where projects share one or
          more IDL files.

Tue Dec  6 08:26:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Trader/Trader.h:
          Also with BDS2006 we need to export the TAO_Lockable class as
          workaround. Reported this to Borland, hopefully they will fix
          this soon

Mon Dec  5 19:43:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2137_Regression/client.cpp:
          Added include of PI/PI.h to fix test failures in static builds

Mon Dec  5 14:58:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/releasenotes/index.html:
          Small improvements

Sun Dec  4 11:34:11 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Notify/XML_Loader.cpp

	Moved definition of TOPOLOGY_ID_NAME earier in the file to avoid
	undefined argument error.

Sun Dec  4 11:14:45 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* TAO_IDL/be/be_helper.cpp

	Fixed an unused arg warning.

Sat Dec  3 20:54:28 2005  Chris Cleeland  <cleeland_c@ociweb.com>

	* orbsvcs/orbsvcs/Notify/XML_Loader.cpp: Moved the namespace decl
	  for TOPOLOGY_ID_NAME inside the VERSIONED_NAMESPACE_DECL block